--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -10,7 +10,7 @@
 <p>In addition, the Application may collect certain information automatically, including, but not limited to, the type of mobile device you use, your mobile devices unique device ID, the IP address of your mobile device, your mobile operating system, the type of mobile Internet browsers you use, and information about the way you use the Application.</p> 
 <h4> </h4> 
 <h4>Does the Application collect precise real time location information of the device?</h4> 
-<p>This Application does not collect precise information about the location of your mobile device.</p> 
+<p>This Application collect precise and approximated information about the location of your mobile device.</p> 
 <h4>Do third parties see and/or have access to information obtained by the Application?</h4> 
 <p>Yes. We will share your information with third parties only in the ways that are described in this privacy statement.</p> 
 <p>We may disclose User Provided and Automatically Collected Information:</p> 
