reference for privacy-policy

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
+                        <li><a href="http://ayeauto.co/privacy-policy.html">Privacy Policy</a>
                         </li>
                         <li><a href="#">Terms of Use</a>
                         </li>
