--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <ul type="square">
 							<li style="font-size:130%;">Bargain-less</li>
 							<li style="font-size:130%;">Fast Booking</li>
-							<li style="font-size:130%;">Fare Metering</li>
+							<li style="font-size:130%;">Fair Metering</li>
 							<li style="font-size:130%;">Zero extra cost</li>
 							<li style="font-size:130%;">Easy Spot and Picking</li>
 						</ul>
