--- a/index.html
+++ b/index.html
@@ -279,11 +279,11 @@
             
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href='https://play.google.com/store/apps/details?id=com.google.android.apps.maps&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-                        <img alt='Google Play இல் பெறுக' src='https://play.google.com/intl/en_us/badges/images/generic/ta_badge_web_generic.png' height="160" width="420"/>
+                    <a href='https://play.google.com/apps/testing/com.ayeauto.test.rnandroid'>
+                        <img alt='Riders App from Store(Aplha-Testing)' src='img/google-play-badge.png' height="160" width="420"/>
                     </a>
-                    <a href='https://play.google.com/store/apps/details?id=com.google.android.apps.maps&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-                        <img alt='Download from Amazon App Store' src='img/amazon-underground-app-us-black.png'  height="105" width="370"/>
+                    <a href='https://play.google.com/apps/testing/com.ayeauto.test.driver'>
+                        <img alt='Drivers App from Store(Aplha-Testing)' src='img/google-play-badge.png'  height="105" width="370"/>
                     </a>
                 </div>
             </div>
