--- a/index.html
+++ b/index.html
@@ -279,11 +279,13 @@
             
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
+					<h3 class="section-subheading text-muted">Riders App from Store (Aplha-Testing).</h3>
                     <a href='https://play.google.com/apps/testing/com.ayeauto.test.rnandroid'>
                         <img alt='Riders App from Store(Aplha-Testing)' src='img/google-play-badge.png' height="160" width="420"/>
                     </a>
+                    <h3 class="section-subheading text-muted">Drivers App from Store (Aplha-Testing).</h3>
                     <a href='https://play.google.com/apps/testing/com.ayeauto.test.driver'>
-                        <img alt='Drivers App from Store(Aplha-Testing)' src='img/google-play-badge.png'  height="105" width="370"/>
+                        <img alt='Drivers App from Store(Aplha-Testing)' src='img/google-play-badge.png' height="160" width="420"/>
                     </a>
                 </div>
             </div>
