--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Find Autos</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted"> Quick and easy to find Autos.Enter destination and search.Choose the nearest auto by rate you prefer.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Live GPS Tracking</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">GPS Metering</h4>
+                    <p class="text-muted"> GPS Metering give tracking info, calculates the distance travelled and Fares, more accurately.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -125,7 +125,7 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Mobile Apps</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted"> App works just with basic internet package and is really fast.</p>
                 </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Step 1</h4>
-                        <p class="text-muted">Find an auto near you</p>
+                        <p class="text-muted">Find an auto near to you, book it !</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -166,7 +166,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Step 2</h4>
-                        <p class="text-muted">Go to the auto or wait for the auto to reach you</p>
+                        <p class="text-muted">Get to Auto or Opt to pick you up</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -180,7 +180,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Step 3</h4>
-                        <p class="text-muted">Ride</p>
+                        <p class="text-muted">Take the Ride</p>
                     </div>
                 </div>
             </div>
