--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Step 1</h4>
-                        <p class="text-muted">Find an auto near to you, book it !</p>
+                        <p class="text-muted">Find an auto near you and book !</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -166,7 +166,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Step 2</h4>
-                        <p class="text-muted">Get to Auto or Opt to pick you up</p>
+                        <p class="text-muted">Get to auto or opt for pick-up</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
