--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Find Autos</h4>
-                    <p class="text-muted"> Quick and easy to find Autos.Enter destination and search.Choose the nearest auto by rate you prefer.</p>
+                    <p class="text-muted"> Quick and easy to find autos nearby.   Enter destination to search autos.  Choose the nearest auto by rate you prefer.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -117,7 +117,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">GPS Metering</h4>
-                    <p class="text-muted"> GPS Metering give tracking info, calculates the distance travelled and Fares, more accurately.</p>
+                    <p class="text-muted"> GPS metering gives tracking info, calculates distance travelled and Fares, more accurately.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -125,7 +125,7 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Mobile Apps</h4>
-                    <p class="text-muted"> App works just with basic internet package and is really fast.</p>
+                    <p class="text-muted"> The App just works with basic internet package and is really fast.</p>
                 </div>
             </div>
         </div>
