--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Find Autos</h4>
-                    <p class="text-muted"> Quick and easy to find autos nearby.   Enter destination to search autos.  Choose the nearest auto by rate you prefer.</p>
+                    <p class="text-muted"> Quick and easy to find autos nearby.   Enter destination to search autos.  Choose the nearest auto by rates you prefer.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
