--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
 </head>
 
 <body id="page-top" class="index">
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top" id="aa-nav">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -56,6 +58,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#services">Features</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#livemap">Live Map</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">How it Works</a>
@@ -93,13 +98,13 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Features</h2>
-                            <ul type="square">
-							<li style="font-size:130%;">Bargain-less</li>
-							<li style="font-size:130%;">Fast Booking</li>
-							<li style="font-size:130%;">Fair Metering</li>
-							<li style="font-size:130%;">Zero extra cost</li>
-							<li style="font-size:130%;">Easy Spot and Picking</li>
-						</ul>
+                    <ul type="square">
+                        <li style="font-size:130%;">Bargain-less</li>
+                        <li style="font-size:130%;">Fast Booking</li>
+                        <li style="font-size:130%;">Fair Metering</li>
+                        <li style="font-size:130%;">Zero extra cost</li>
+                        <li style="font-size:130%;">Easy Spot and Picking</li>
+                    </ul>
                 </div>
             </div>
             <div class="row text-center">
@@ -109,7 +114,8 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Find Autos</h4>
-                    <p class="text-muted"> Quick and easy to find autos nearby.   Enter destination to search autos.  Choose the nearest auto by rates you prefer.</p>
+                    <p class="text-muted"> Quick and easy to find autos nearby. Enter destination to search autos. Choose the nearest auto by rates
+                        you prefer.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -129,6 +135,46 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section id="livemap" style="margin: 0;padding-top: 0;">
+        <div id="map" style="margin: 0;padding: 0;"></div>
+        <script>
+            var map;
+            var curLat = 11.2918833;
+            var curLon = 75.781179;
+
+            $(window).on('resize', function () {
+                $("#map").height($(window).height());
+                $("#map").width($(window).width());
+            }).trigger('resize'); //on page load
+
+            function initMap() {
+                map = new google.maps.Map(document.getElementById('map'), {
+                    zoom: 15,
+                    center: new google.maps.LatLng(curLat, curLon),
+                    mapTypeId: 'terrain'
+                });
+
+                showDrivers();
+            }
+
+            function showDrivers() {
+                $.getJSON('http://aproxy.noip.me/LocationDBWeb/api/getDriverMarkersPost.php?lat=' + curLat + '&lon=' +
+                    curLon + '&rad=10.0',
+                    function (autos) {
+                        for (auto of autos) {
+                            var latLng = new google.maps.LatLng(auto.lat, auto.lon);
+                            var marker = new google.maps.Marker({
+                                position: latLng,
+                                map: map
+                            });
+                        }
+                    });
+            }
+        </script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLNoBO5W0qLQhp-tZlQxFdn0i8tLvETDk&callback=initMap">
+        </script>
     </section>
 
     <!-- Portfolio Grid Section -->
@@ -209,7 +255,9 @@
                                     <h4 class="subheading">The Humble Beginning</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
+                                        totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt
+                                        et ea quo dolore laudantium consectetur!</p>
                                 </div>
                             </div>
                         </li>
@@ -223,7 +271,9 @@
                                     <h4 class="subheading">An Idea is Born</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
+                                        totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt
+                                        et ea quo dolore laudantium consectetur!</p>
                                 </div>
                             </div>
                         </li>
@@ -237,7 +287,9 @@
                                     <h4 class="subheading">Transition to Full Service</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
+                                        totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt
+                                        et ea quo dolore laudantium consectetur!</p>
                                 </div>
                             </div>
                         </li>
@@ -251,7 +303,9 @@
                                     <h4 class="subheading">Launching</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
+                                        totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt
+                                        et ea quo dolore laudantium consectetur!</p>
                                 </div>
                             </div>
                         </li>
@@ -276,10 +330,10 @@
                     <h2 class="section-heading">Get the app</h2>
                 </div>
             </div>
-            
+
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-					<h3>Riders App</h3>
+                    <h3>Riders App</h3>
                     <a href='https://play.google.com/apps/testing/com.ayeauto.test.rnandroid'>
                         <img alt='Riders App from Store(Aplha-Testing)' src='img/google-play-badge.png' height="160" width="420"/>
                     </a>
@@ -385,7 +439,9 @@
                             <h2>Finding an auto</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                             <img class="img-responsive img-centered" src="img/demo/vsm_roadmap.jpg" alt="">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt
+                                minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate,
+                                maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -410,7 +466,9 @@
                             <h2>Wait for auto</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                             <img class="img-responsive img-centered" src="img/demo/Road-Map.jpg" alt="">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt
+                                minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate,
+                                maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -436,7 +494,9 @@
                             <h2>Ride</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                             <img class="img-responsive img-centered" src="img/demo/73127.jpg" alt="">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt
+                                minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate,
+                                maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -462,7 +522,9 @@
                             <h2>Project Name</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                             <img class="img-responsive img-centered" src="img/portfolio/dreams-preview.png" alt="">
-                            <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.</p>
+                            <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>.
+                                Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful
+                                template that’s designed with the Bootstrap framework in mind.</p>
                             <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
@@ -471,9 +533,6 @@
             </div>
         </div>
     </div>
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
