--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
+    <style>
+      #pac-input {
+        background-color: #fff;
+        font-family: Roboto;
+        font-size: 20px;
+        font-weight: 200;
+        margin-top: 2cm;
+        padding: 0 11px 0 13px;
+        text-overflow: ellipsis;
+        width: 400px;
+      }
+    </style>
 </head>
 
 <body id="page-top" class="index">
@@ -138,17 +150,90 @@
     </section>
 
     <section id="livemap" style="margin: 0;padding-top: 0;">
+		
         <div id="map" style="margin: 0;padding: 0;"></div>
+        <input id="pac-input" class="controls" type="text" placeholder="Search for autos at your place">
         <script>
             var map;
-            var curLat = 11.2918833;
-            var curLon = 75.781179;
+            var curLat = 11.2588;
+            var curLon = 75.7804;
 
             $(window).on('resize', function () {
                 $("#map").height($(window).height());
                 $("#map").width($(window).width());
             }).trigger('resize'); //on page load
 
+      function initAutocomplete() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 11.2588, lng: 75.7804},
+          zoom: 13,
+          mapTypeId: 'roadmap'
+        });
+
+        // Create the search box and link it to the UI element.
+        var input = document.getElementById('pac-input');
+        var searchBox = new google.maps.places.SearchBox(input);
+        map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+
+		showDrivers(curLat,curLon);
+
+        // Bias the SearchBox results towards current map's viewport.
+        map.addListener('bounds_changed', function() {
+          searchBox.setBounds(map.getBounds());
+        });
+
+        var markers = [];
+        // Listen for the event fired when the user selects a prediction and retrieve
+        // more details for that place.
+        searchBox.addListener('places_changed', function() {
+          var places = searchBox.getPlaces();
+
+          if (places.length == 0) {
+            return;
+          }
+
+          // Clear out the old markers.
+          markers.forEach(function(marker) {
+            marker.setMap(null);
+          });
+          markers = [];
+
+          // For each place, get the icon, name and location.
+          var bounds = new google.maps.LatLngBounds();
+          places.forEach(function(place) {
+            if (!place.geometry) {
+              console.log("Returned place contains no geometry");
+              return;
+            }
+            var icon = {
+              url: place.icon,
+              size: new google.maps.Size(71, 71),
+              origin: new google.maps.Point(0, 0),
+              anchor: new google.maps.Point(17, 34),
+              scaledSize: new google.maps.Size(25, 25)
+            };
+
+            // Create a marker for each place.
+            markers.push(new google.maps.Marker({
+              map: map,
+              icon: icon,
+              title: place.name,
+              position: place.geometry.location
+            }));
+
+			showDrivers(place.geometry.location.lat(),place.geometry.location.lng());
+			
+            if (place.geometry.viewport) {
+              // Only geocodes have viewport.
+              bounds.union(place.geometry.viewport);
+            } else {
+              bounds.extend(place.geometry.location);
+            }
+          });
+          map.fitBounds(bounds);
+        });
+      }
+      
             function initMap() {
                 map = new google.maps.Map(document.getElementById('map'), {
                     zoom: 15,
@@ -156,16 +241,17 @@
                     mapTypeId: 'terrain'
                 });
 
-                showDrivers();
+                //showDrivers();
             }
 
-            function showDrivers() {
+            function showDrivers(lat,lon) {
+				console.log("showDrivers"+lat);
 		var image = {
 			url: 'img/ayeauto_marker.png', // image is 512 x 512
 			//scaledSize : new google.maps.Size(22, 32)
 		    };
-                $.getJSON('http://aproxy.noip.me/api?lat=' + curLat + '&lon=' +
-                    curLon + '&rad=10.0',
+                $.getJSON('http://aproxy.noip.me/api?lat=' + lat + '&lon=' +
+                    lon + '&rad=10.0',
                     function (autos) {
                         for (auto of autos) {
                             var latLng = new google.maps.LatLng(auto.lat, auto.lon);
@@ -179,7 +265,7 @@
                     });
             }
         </script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLNoBO5W0qLQhp-tZlQxFdn0i8tLvETDk&callback=initMap">
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLNoBO5W0qLQhp-tZlQxFdn0i8tLvETDk&libraries=places&callback=initAutocomplete">
         </script>
     </section>
 
