Info Window for phone number

--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
               position: place.geometry.location
             }));
 
+			
 			showDrivers(place.geometry.location.lat(),place.geometry.location.lng());
 			
             if (place.geometry.viewport) {
@@ -258,9 +259,17 @@
                             var marker = new google.maps.Marker({
                                 position: latLng,
                                 map: map,
-				icon:image,
-				title:auto.phone,
+								icon:image,
+								title:auto.phone,
                             });
+                            
+                             var infowindow = new google.maps.InfoWindow({
+							  content: auto.phone
+							});
+							
+							marker.addListener('click', function() {
+								infowindow.open(map, marker);
+							});
                         }
                     });
             }
