--- a/index.html
+++ b/index.html
@@ -107,18 +107,52 @@
     <!-- Services Section -->
     <section id="services">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Features</h2>
-                    <ul type="square">
-                        <li style="font-size:130%;">Bargain-less</li>
-                        <li style="font-size:130%;">Fast Booking</li>
-                        <li style="font-size:130%;">Fair Metering</li>
-                        <li style="font-size:130%;">Zero extra cost</li>
-                        <li style="font-size:130%;">Easy Spot and Picking</li>
-                    </ul>
+            <div class="row text-center">
+                <div class="col-xs-6 col-sm-4 col-md-3">
+                    <span class="fa-stack fa-1x">
+                        <i class="fa fa-square fa-stack-2x text-primary"></i>
+                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <p class="text-muted">Bargainless</p>
+                </div>
+                <div class="col-xs-6 col-sm-4 col-md-3">
+                    <span class="fa-stack fa-1x">
+                        <i class="fa fa-square fa-stack-2x text-primary"></i>
+                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <p class="text-muted">Fast Booking</p>
+                </div>
+                <div class="col-xs-6 col-sm-4 col-md-3">
+                    <span class="fa-stack fa-1x">
+                        <i class="fa fa-square fa-stack-2x text-primary"></i>
+                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <p class="text-muted">Fair Metering</p>
+                </div>
+                <div class="col-xs-6 col-sm-4 col-md-3">
+                    <span class="fa-stack fa-1x">
+                        <i class="fa fa-square fa-stack-2x text-primary"></i>
+                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <p class="text-muted">Zero extra cost</p>
+                </div>
+                <div class="col-xs-6 col-sm-4 col-md-3">
+                    <span class="fa-stack fa-1x">
+                        <i class="fa fa-square fa-stack-2x text-primary"></i>
+                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <p class="text-muted">Easy Spot and Picking</p>
+                </div>
+                <div class="col-xs-6 col-sm-4 col-md-3">
+                    <span class="fa-stack fa-1x">
+                        <i class="fa fa-square fa-stack-2x text-primary"></i>
+                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <p class="text-muted">Abcd efg hi</p>
                 </div>
             </div>
+
+
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
