Changed the icons to be more meaningful.

--- a/index.html
+++ b/index.html
@@ -111,42 +111,42 @@
                 <div class="col-xs-6 col-sm-4 col-md-3">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-smile-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <p class="text-muted">Bargainless</p>
                 </div>
                 <div class="col-xs-6 col-sm-4 col-md-3">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-rocket fa-stack-1x fa-inverse"></i>
                     </span>
                     <p class="text-muted">Fast Booking</p>
                 </div>
                 <div class="col-xs-6 col-sm-4 col-md-3">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-calculator fa-stack-1x fa-inverse"></i>
                     </span>
                     <p class="text-muted">Fair Metering</p>
                 </div>
                 <div class="col-xs-6 col-sm-4 col-md-3">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-circle-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <p class="text-muted">Zero extra cost</p>
                 </div>
                 <div class="col-xs-6 col-sm-4 col-md-3">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-street-view fa-stack-1x fa-inverse"></i>
                     </span>
                     <p class="text-muted">Easy Spot and Picking</p>
                 </div>
                 <div class="col-xs-6 col-sm-4 col-md-3">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-superpowers fa-stack-1x fa-inverse"></i>
                     </span>
                     <p class="text-muted">Abcd efg hi</p>
                 </div>
@@ -157,7 +157,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-car fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Find Autos</h4>
                     <p class="text-muted"> Quick and easy to find autos nearby. Enter destination to search autos. Choose the nearest auto by rates
@@ -166,7 +166,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-road fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">GPS Metering</h4>
                     <p class="text-muted"> GPS metering gives tracking info, calculates distance travelled and Fares, more accurately.</p>
@@ -174,7 +174,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-mobile-phone fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Mobile Apps</h4>
                     <p class="text-muted"> The App just works with basic internet package and is really fast.</p>
