--- a/index.html
+++ b/index.html
@@ -136,14 +136,20 @@
                     </span>
                     <p class="text-muted">Zero extra cost</p>
                 </div>
-                <div class="col-xs-6 col-sm-4 col-md-3">
+                <!--Add a blank item which is hidden in xs and sm sizes. This will help center the bottom two iems in size lg-->
+                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-6 hidden-xs hidden-sm">
+                    <span class="fa-stack fa-1x">
+                    </span>
+                    <p></p>
+                </div>
+                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-6">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
                         <i class="fa fa-street-view fa-stack-1x fa-inverse"></i>
                     </span>
                     <p class="text-muted">Easy Spot and Picking</p>
                 </div>
-                <div class="col-xs-6 col-sm-4 col-md-3">
+                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-6">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
                         <i class="fa fa-superpowers fa-stack-1x fa-inverse"></i>
