Cleanedup the about page. Replaced the random pictures with placeholder pictures. Renamed the feature list to make all of them look similar (two lines on a mobile display).

--- a/index.html
+++ b/index.html
@@ -107,68 +107,54 @@
     <!-- Services Section -->
     <section id="services">
         <div class="container">
+            <h2 class="section-heading text-center">Features</h2>
+            <br>
             <div class="row text-center">
-                <div class="col-xs-6 col-sm-4 col-md-3">
+                <div class="col-xs-4 col-sm-4 col-md-2">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
                         <i class="fa fa-smile-o fa-stack-1x fa-inverse"></i>
                     </span>
-                    <p class="text-muted">Bargainless</p>
+                    <p class="text-muted">No Bargaining</p>
                 </div>
-                <div class="col-xs-6 col-sm-4 col-md-3">
-                    <span class="fa-stack fa-1x">
-                        <i class="fa fa-square fa-stack-2x text-primary"></i>
-                        <i class="fa fa-rocket fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <p class="text-muted">Fast Booking</p>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-3">
+                <div class="col-xs-4 col-sm-4 col-md-2">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
                         <i class="fa fa-calculator fa-stack-1x fa-inverse"></i>
                     </span>
                     <p class="text-muted">Fair Metering</p>
                 </div>
-                <div class="col-xs-6 col-sm-4 col-md-3">
+                <div class="col-xs-4 col-sm-4 col-md-2">
+                    <span class="fa-stack fa-1x">
+                        <i class="fa fa-square fa-stack-2x text-primary"></i>
+                        <i class="fa fa-rocket fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <p class="text-muted">Fast Booking</p>
+                </div>
+                <div class="col-xs-4 col-sm-4 col-md-2">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
                         <i class="fa fa-circle-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <p class="text-muted">Zero extra cost</p>
                 </div>
-                <!--Add a blank item which is hidden in xs and sm sizes. This will help center the bottom two iems in size lg-->
-                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-6 hidden-xs hidden-sm">
-                    <span class="fa-stack fa-1x">
-                    </span>
-                    <p></p>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-6">
+                <div class="col-xs-4 col-sm-4 col-md-2 col-lg-6">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
                         <i class="fa fa-street-view fa-stack-1x fa-inverse"></i>
                     </span>
-                    <p class="text-muted">Easy Spot and Picking</p>
+                    <p class="text-muted">Easy Spotting</p>
                 </div>
-                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-6">
+                <div class="col-xs-4 col-sm-4 col-md-2 col-lg-6">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
                         <i class="fa fa-superpowers fa-stack-1x fa-inverse"></i>
                     </span>
-                    <p class="text-muted">Abcd efg hi</p>
+                    <p class="text-muted">Easy Picking</p>
                 </div>
             </div>
-
-
+            <hr/>
             <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-car fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Find Autos</h4>
-                    <p class="text-muted"> Quick and easy to find autos nearby. Enter destination to search autos. Choose the nearest auto by rates
-                        you prefer.</p>
-                </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -184,6 +170,15 @@
                     </span>
                     <h4 class="service-heading">Mobile Apps</h4>
                     <p class="text-muted"> The App just works with basic internet package and is really fast.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-car fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Find Autos</h4>
+                    <p class="text-muted"> Quick and easy to find autos nearby. Enter destination to search autos. Choose the nearest auto by rates
+                        you prefer. <a class="page-scroll" href="#livemap">Click here</a> to view a live map of the autos in your area.</p>
                 </div>
             </div>
         </div>
@@ -335,11 +330,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/demo/vsm_roadmap.jpg" class="img-responsive" alt="">
+                        <img src="http://via.placeholder.com/350x300" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Step 1</h4>
-                        <p class="text-muted">Find an auto near you and book !</p>
+                        <p class="text-muted">Find an auto near you and book!</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -349,7 +344,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/demo/Road-Map.jpg" class="img-responsive" alt="">
+                        <img src="http://via.placeholder.com/350x300" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Step 2</h4>
@@ -363,7 +358,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/demo/73127.jpg" class="img-responsive" alt="">
+                        <img src="http://via.placeholder.com/350x300" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Step 3</h4>
@@ -383,83 +378,11 @@
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2014-2015</h4>
-                                    <h4 class="subheading">The Humble Beginning</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
-                                        totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt
-                                        et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>March 2016</h4>
-                                    <h4 class="subheading">An Idea is Born</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
-                                        totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt
-                                        et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>December 2016</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
-                                        totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt
-                                        et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Today</h4>
-                                    <h4 class="subheading">Launching</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
-                                        totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt
-                                        et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
+                totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt
+                et ea quo dolore laudantium consectetur!
+            </p>
         </div>
     </section>
 
@@ -473,13 +396,16 @@
             </div>
 
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h3>Riders App</h3>
-                    <a href='https://play.google.com/apps/testing/com.ayeauto.test.rnandroid'>
+                <!-- <div class="col-lg-8 col-lg-offset-2 text-center">-->
+                <div class="col-sm-6 text-center">
+                    <h3>For Riders</h3>
+                    <a href='https://play.google.com/apps/testing/com.ayeauto.test.rnandroid' target="_blank">
                         <img alt='Riders App from Store(Aplha-Testing)' src='img/google-play-badge.png' height="100" width="263"/>
                     </a>
-                    <h3>Drivers App</h3>
-                    <a href='https://play.google.com/apps/testing/com.ayeauto.test.driver'>
+                </div>
+                <div class="col-sm-6 text-center">
+                    <h3>For Drivers</h3>
+                    <a href='https://play.google.com/apps/testing/com.ayeauto.test.driver' target="_blank">
                         <img alt='Drivers App from Store(Aplha-Testing)' src='img/google-play-badge.png' height="100" width="263"/>
                     </a>
                 </div>
@@ -493,7 +419,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Enter your contact info and your message.</h3>
                 </div>
             </div>
             <div class="row">
@@ -579,7 +505,7 @@
                             <!-- Project Details Go Here -->
                             <h2>Finding an auto</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/demo/vsm_roadmap.jpg" alt="">
+                            <img class="img-responsive img-centered" src="http://via.placeholder.com/600x300" alt="">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt
                                 minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate,
                                 maiores repudiandae, nostrum, reiciendis facere nemo!</p>
@@ -606,7 +532,7 @@
                         <div class="modal-body">
                             <h2>Wait for auto</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/demo/Road-Map.jpg" alt="">
+                            <img class="img-responsive img-centered" src="http://via.placeholder.com/600x300" alt="">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt
                                 minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate,
                                 maiores repudiandae, nostrum, reiciendis facere nemo!</p>
@@ -634,7 +560,7 @@
                             <!-- Project Details Go Here -->
                             <h2>Ride</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/demo/73127.jpg" alt="">
+                            <img class="img-responsive img-centered" src="http://via.placeholder.com/600x300" alt="">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt
                                 minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate,
                                 maiores repudiandae, nostrum, reiciendis facere nemo!</p>
