Added facebook, twitter and youtube links. Minor visual tweaks

--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
                     <p class="text-muted">Easy Picking</p>
                 </div>
             </div>
+            <div class="hidden-xs"><br></div>
             <hr/>
+            <div class="hidden-xs"><br></div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -466,11 +468,11 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://twitter.com/ayeauto" target="_blank"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        <li><a href="https://www.facebook.com/ayeauto.in/" target="_blank"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://www.youtube.com/channel/UC-YPb0WQ09PVB3XlYirh6Bw?guided_help_flow=3" target="_blank"><i class="fa fa-youtube"></i></a>
                         </li>
                     </ul>
                 </div>
