--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
                     </span>
                     <p class="text-muted">Zero extra cost</p>
                 </div>
-                <div class="col-xs-4 col-sm-4 col-md-2 col-lg-6">
+                <div class="col-xs-4 col-sm-4 col-md-2">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
                         <i class="fa fa-street-view fa-stack-1x fa-inverse"></i>
                     </span>
                     <p class="text-muted">Easy Spotting</p>
                 </div>
-                <div class="col-xs-4 col-sm-4 col-md-2 col-lg-6">
+                <div class="col-xs-4 col-sm-4 col-md-2">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
                         <i class="fa fa-superpowers fa-stack-1x fa-inverse"></i>
