--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <section id="livemap" style="margin: 0;padding-top: 0;">
 		
         <div id="map" style="margin: 0;padding: 0;"></div>
-        <input id="pac-input" class="controls" type="text" placeholder="Search for autos at your place">
+        <input id="pac-input" class="form-control" type="text" placeholder="Enter a location">
         <script>
             var map;
             var curLat = 11.2588;
@@ -332,7 +332,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="http://via.placeholder.com/350x300" class="img-responsive" alt="">
+                        <img src="http://via.placeholder.com/360x300" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Step 1</h4>
@@ -346,7 +346,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="http://via.placeholder.com/350x300" class="img-responsive" alt="">
+                        <img src="http://via.placeholder.com/360x300" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Step 2</h4>
@@ -360,7 +360,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="http://via.placeholder.com/350x300" class="img-responsive" alt="">
+                        <img src="http://via.placeholder.com/360x300" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Step 3</h4>
