Added less compiler.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
         </div>
     </section>
-    <section id="livemap" style="margin: 0;padding-top: 0;">
+    <section id="livemap">
         <div id="map" style="margin: 0;padding: 0;"></div>
         <input id="pac-input" class="form-control" type="text" placeholder="Enter a location">
         <script src="js/googlemap.js">
