Fixed tell me more button

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Ayeauto!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#features" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
