--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
         </div>
     </header>
-    <section id="features">
+    <section id="features" class="center-content">
         <div class="container">
             <h3 class="section-heading text-center">Features</h3>
             <br>
@@ -173,7 +173,7 @@
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLNoBO5W0qLQhp-tZlQxFdn0i8tLvETDk&libraries=places&callback=initAutocomplete">
         </script>
     </section>
-    <section id="apps" class="bg-light-gray">
+    <section id="apps" class="bg-light-gray center-content">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -212,7 +212,7 @@
             </div>
         </div>
     </section>
-    <section id="contact">
+    <section id="contact" class="center-content">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
