Implemented 	navigator.geolocation.watchPosition(showPosition)
	modified:   index.html
	modified:   js/googlemap.js

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <input id="pac-input" class="form-control" type="text" placeholder="Enter a location">
         <script src="js/googlemap.js">
         </script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLNoBO5W0qLQhp-tZlQxFdn0i8tLvETDk&libraries=places&callback=initAutocomplete">
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLNoBO5W0qLQhp-tZlQxFdn0i8tLvETDk&libraries=places&callback=initMap">
         </script>
     </section>
     <section id="apps" class="bg-light-gray center-content">
