--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <!-- jQuery -->
   <script>
-   if (window.location.host.indexOf('github.io') > -1 && window.location.protocol != "https:"){
-    window.location.protocol = "https";
-   }
+   var host = "ayeauto.live"
+	if (window.location.host == host && window.location.protocol != "https:") {
+  	window.location.protocol = "https:"
+	}
    </script>
     <script src="js/jquery.js"></script>
     <style>
