--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<script>
-   var host = "ayeauto.live"
-	if (window.location.host == host && window.location.protocol != "https:") {
-  	window.location.protocol = "https:"
-	}
-   </script>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,6 +18,14 @@
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <!-- jQuery -->
+   <script>
+   var hosta = window.location.hostname;
+   var host = "ayeauto.live"
+	if (window.location.host == host && window.location.protocol != "https:") {
+  	window.location.protocol = "https:"
+	}
+   </script>
+
     <script src="js/jquery.js"></script>
     <style>
         #pac-input {
@@ -39,6 +41,12 @@
     </style>
 </head>
 <body id="page-top" class="index">
+     <h1>
+      the value for number is:
+      <script type="text/javascript">
+        document.write(hosta)
+      </script>
+    </h1>
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top" id="aa-nav">
         <div class="container">
