--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <!-- jQuery -->
    <script>
-   var hosta = window.location.hostname;
+   var hosta = window.location.host;
    var host = "ayeauto.live"
 	if (window.location.host == host && window.location.protocol != "https:") {
   	window.location.protocol = "https:"
