trial 6 https redirect

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
     <!-- jQuery -->
    <script>
    var hosta = window.location.protocol;
-   var host = "ayeauto.live"
+   </script>
+   <!--script>   
+	var host = "ayeauto.live"
 	if (window.location.host == host && window.location.protocol != "https:") {
   	window.location.protocol = "https:"
 	}
-   </script>
+   </script!-->
 
     <script src="js/jquery.js"></script>
     <style>
@@ -41,7 +43,7 @@
     </style>
 </head>
 <body id="page-top" class="index">
-     <!--h1>
+     <!h1>
       the value for number is:
       <script type="text/javascript">
         document.write(hosta)
