--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <!-- jQuery -->
    <script>
-   var hosta = window.location.protocol;
+   var hosta = window.location.protocol+"7";
    </script>
-   <!--script>   
+   <script>   
 	var host = "ayeauto.live"
 	if (window.location.host == host && window.location.protocol != "https:") {
   	window.location.protocol = "https:"
 	}
-   </script!-->
-
+   </script>
     <script src="js/jquery.js"></script>
     <style>
         #pac-input {
