--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
         <input id="pac-input" class="form-control" type="text" placeholder="Enter a location">
         <script src="js/googlemap.js">
         </script>
+	<p id="Test"></p>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLNoBO5W0qLQhp-tZlQxFdn0i8tLvETDk&libraries=places&callback=initMap">
         </script>
     </section>
