edited debug_mobile var

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@ function myFunction(value) {
   debug_mobile = debug_mobile + value.lat + "<br>";
 }
    showDrivers(1.2,12.2);
-   var debug_mobilee = "desktop";
+   var debug_mobile = "desktop";
    var hosta = window.location.protocol+"7";
 	var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
 	if (isMobile) {
   	/* your code here */
-	debug_mobilee = "mobile";
+	debug_mobile = "mobile";
 	}
    </script>
    <script>   
