removed async in map src

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ var debug_mobile = "desktop";
         <script src="js/googlemap.js">
         </script>
 	<p id="Test"></p>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLNoBO5W0qLQhp-tZlQxFdn0i8tLvETDk&libraries=places&callback=initMap">
+        <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLNoBO5W0qLQhp-tZlQxFdn0i8tLvETDk&libraries=places&callback=initMap">
         </script>
     </section>
     <section id="apps" class="bg-light-gray center-content">
