--- a/inline.html
+++ b/inline.html
@@ -139,7 +139,7 @@ function markerFunction(auto) {
       	//the watchposition() method show the position of the user and update it while is moving
         //navigator.geolocation.watchPosition(showPosition);
 	//}
-	map.setCenter(marker.getPosition());
+	//map.setCenter(marker.getPosition());
       };
     </script>
   </head>
