//map.data.loadgeoJson()

--- a/inline.html
+++ b/inline.html
@@ -68,7 +68,7 @@
       	//the watchposition() method show the position of the user and update it while is moving
         //navigator.geolocation.watchPosition(showPosition);
 	//}
-	map.setCenter(marker.getPosition());
+	//map.setCenter(marker.getPosition());
       };
     </script>
   </head>
