trying ajax with crossOrigin

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <!-- jQuery -->
    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+   <script type="text/javascript" src="js/jquery.ajax-cross-origin.min.js"></script>
    <script src="js/jquery.js"></script>
    <script>
 var jsonArray;
