Temporary remove https in index.html, http://approxy...

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ var debug_mobile = "desktop";
 	debug_mobile = "mobile";
 	}
    </script>
-   <script>   
+   <!--script>   
 	var host = "ayeauto.live"
 	if (window.location.host == host && window.location.protocol != "https:" && debug_mobile == "mobile") {
   	window.location.protocol = "https:"
 	}
-   </script>
+   </script!-->
     <style>
         #pac-input {
             background-color: #fff;
