--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Aye Auto</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
